kubernetes/apps/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-main
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web-internal
      namespace: cilium
      sectionName: https
  hostnames:
    - argocd.devpi.de
  rules:
    - backendRefs:
        - kind: Service
          group: ""
          port: 80
          name: argocd-server
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
